UserUI, Arenas, Clubs implemented

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DAIF2021Context": "Server=DESKTOP-QK56LK9\\MSSQLDEVELOPMENT;Database=DAIF2021;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
